chore: fix page responsiveness on tablet and mobile

--- a/web/src/components/pages/partner/partner.css
+++ b/web/src/components/pages/partner/partner.css
@@ -11,7 +11,7 @@
     transition: opacity var(--transition-duration-slow) var(--easing);
     padding-top: 25px;
 
-    @media (--md-down) {
+    @media (--xs-down) {
         flex-direction: column;
     }
 }
@@ -22,6 +22,10 @@
 
 .partnerships-container .page-heading {
     font-size: 48px;
+
+    @media (--md-only) {
+        margin-top: 0;
+    }
 }
 
 .partnerships-container .partnerships-header-image {
@@ -36,7 +40,7 @@
 
     & img {
         @media (--md-down) {
-            max-height: 250px;
+            max-height: 220px;
         }
     }
 }
@@ -65,6 +69,10 @@
     padding: 15px;
     justify-content: flex-start;
 
+    @media (--md-only) {
+        margin-top: 15px;
+    }
+
     @media (--xs-down) {
         margin: 50px auto 25px auto;
     }
@@ -90,10 +98,18 @@
 .partnerships-section {
     margin-bottom: 40px;
 
-    @media (--lg-up) {
+    @media (--lg-only) {
         height: 550px;
+    }
+
+    @media (--md-up) {
         background: url('./images/waves.png');
         background-size: cover;
+    }
+
+    @media (--md-only) {
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 
     @media (--xs-down) {
@@ -109,7 +125,7 @@
     max-width: 80rem;
     text-align: center;
 
-    @media (--lg-up) {
+    @media (--md-up) {
         margin: 0 auto;
         padding: 2rem 4rem;
     }
@@ -141,10 +157,14 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-column-gap: 80px;
-    grid-row-gap: 0px;
     align-items: center;
 
-    @media (--md-down) {
+    @media (--md-only) {
+        grid-template-columns: repeat(3, 200px);
+        grid-row-gap: 30px;
+    }
+
+    @media (--xs-down) {
         margin: 0px 20px 60px 20px;
         grid-template-columns: repeat(3, 50px);
         grid-column-gap: 70px;
